fixed codeblock formatting and updated some text

--- a/index.html
+++ b/index.html
@@ -21,22 +21,27 @@
             <p class="author">
                 By Isaac Goldberg
                 <br />
-                Last Updated: 2/16/2023
+                Last Updated: 2/17/2023
             </p>
         </div>
 
         <p class="description">
-            Hi! This is an informational article to instruct beginner web developers on
+            Hi! Have you ever wanted to create your own website? A real website, where you control everything
+            and can do whatever you want, and aren't limited by only the tools available on
+            website-building platforms like Google Sites, and you get to learn
+            how to write basic code?
+            You've come to the right place.
+            This is an informational article to instruct beginner web developers on
             creating their first website from
-            scratch, and using GitHub to host it publicly.
+            scratch, and how to use GitHub to host it publicly.
         </p>
 
         <div class="note">
             <p class="note-text">
-                Note: This article only covers the bare minimum for creating a working website from HTML. For more
-                advanced websites, <a href="https://hackr.io/blog/web-development-frameworks">here is an article by
-                    hackr.io</a> on the best frameworks for building modern web
-                applications, and there are plenty of tutorials you can watch on YouTube for more info!
+                Note: This article only covers the bare minimum for creating a working website from HTML. If you're looking to build a more
+                advanced website using more advanced software engineering techniques, that is out of the scope of this article.
+                However, <a href="https://hackr.io/blog/web-development-frameworks">here's an article by hackr.io</a>
+                on the best frameworks for building modern web applications!
             </p>
         </div>
     </div>
@@ -44,9 +49,9 @@
     <div class="article-container">
         <h1>Step 1: Create a GitHub Account</h1>
         <p>
-            GitHub is a free platform owned by Microsoft designed for developers to
-            build, manage, and deliver software to the public. For more information, visit their <a
-                href="https://github.com/about">about page</a>.
+            GitHub is a free platform owned by Microsoft designed to help developers
+            build, manage, and deliver software to the public. For more information, visit <a
+                href="https://github.com/about">their about page</a>.
 
             <br />
             <br />
@@ -54,7 +59,7 @@
             If you already have a GitHub account, you can sign in instead.
         </p>
 
-        <a href="https://github.com">
+        <a href="https://github.com" target="_blank">
             <img class="image github"
                 src="https://media.discordapp.net/attachments/1075539648346062879/1075896042316365884/GitHub-Emblem.png">
         </a>
@@ -64,7 +69,7 @@
         <h1>Step 2: Create a Code Repository in GitHub</h1>
         <p>
             A repository is an archive of the code in your project you are working on.
-            It allows you to easily update your code and view the history of changes.
+            It allows you to easily update your code and view a history of the changes you've made.
 
             <br />
             <br />
@@ -110,13 +115,9 @@
 
             Your first line should be this:
         </p>
-        <pre>
-        <code>
-            &#60;!DOCTYPE html&#62;
-            &#60;html&#62;&#60;/html&#62;
-            &#60;p&#62;foo bar&#60;/p&#62;
-        </code>
-        </pre>
+        <pre><code>&#60;!DOCTYPE html&#62;
+&#60;html&#62;&#60;/html&#62;
+&#60;p&#62;foo bar&#60;/p&#62;</code></pre>
         <p>
             This tag simply specifies that the document type is HTML.
         </p>
