updated site content

--- a/index.html
+++ b/index.html
@@ -274,6 +274,102 @@
         <p>
             You can now share this URL with anybody, and they'll be able to view your website as well!
         </p>
+
+        <h1>More Information</h1>
+
+        <p>
+            If you'd like to change your website, you can simply return to the main
+            code tab of your repository, click on your "index.html" file,
+            and then click the button with a pencil on it at the top of the file.
+            This will allow you to edit your code. Once finished, click on
+            the green "Commit changes" button at the bottom, and in a few minutes your
+            live website will be updated!
+        </p>
+
+        <h3>Why Web Development?</h3>
+
+        <p>
+            Web development has become more and more relevant in recent years
+            as a result of society's shift to depending on technology and the Internet.
+            It is a useful skill to know how to build your own website
+            no matter what job you have, as paying another organization to host your website
+            for you can be very expensive.
+            <br /><br />
+            Some things you do with your own website:
+        </p>
+
+        <ul>
+            <li>Share cooking recipes</li>
+            <li>Create a blog</li>
+            <li>Make an "about me" website for others to read about you</li>
+            <li>Create informational articles to help others or spread awareness about a topic</li>
+            <li>Create websites for your friends and family, so they don't need to pay for hosting fees</li>
+            <li>If you're interested in making a career out of web development, it is generally a high paying job</li>
+        </ul>
+
+        <h3>Career Opportunities</h3>
+
+        <p>
+            According to <a href="https://www.indeed.com/career/web-developer/salaries">indeed.com</a>,
+            web developers (people who write the code for the front-end of websites, the part that the public sees)
+            have an average annual salary of $80,434. Developers with 10 or more years
+            of experience in the field have an average salary of $102,267.
+            So if this is an activity you love, you could easily make a living from it!
+
+            <br /><br />
+
+            Futhermore, web development is one way to get into the general field of
+            software engineering, which also contains many other jobs you might be interested in.
+
+            <br /><br />
+            Here are some related jobs and their average salaries, according to both
+            <a href="https://www.indeed.com/career/web-developer/salaries">indeed.com</a>
+            and <a href="https://money.usnews.com/careers/best-jobs/software-developer/salary">U.S. News</a>:
+        </p>
+
+        <table>
+            <tr class="headers">
+                <th>Job Name</th>
+                <th>Average Salary</th>
+                <th>Description</th>
+            </tr>
+
+            <tr>
+                <td>IT Manager</td>
+                <td>$162,930</td>
+                <td>IT managers oversee all technology matters for an organization</td>
+            </tr>
+
+            <tr>
+                <td>Software Engineer</td>
+                <td>$114,168</td>
+                <td>Computer programmers write code that instruct everyday software programs on how to run</td>
+            </tr>
+
+            <tr>
+                <td>Front End Developer</td>
+                <td>$110,460</td>
+                <td>Frontend developers write the code that renders the interfaces that users interact with, similar to web developers</td>
+            </tr>
+
+            <tr>
+                <td>Back End Developer</td>
+                <td>$158,292</td>
+                <td>Backend developers work with the servers and databases that send data to the front end</td>
+            </tr>
+
+            <tr>
+                <td>Full Stack Developer</td>
+                <td>$119,828</td>
+                <td>Fullstack developers work with both the front end and back end</td>
+            </tr>
+
+            <tr>
+                <td>Computer Network Architect</td>
+                <td>$120,650</td>
+                <td>Computer network architects design and maintain data communication networks</td>
+            </tr>
+        </table>
     </div>
 
     <script src="assets/prism.js"></script>
