updated site content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="author">
                 By Isaac Goldberg
                 <br />
-                Last Updated: 2/17/2023
+                Last Updated: 2/21/2023
             </p>
         </div>
 
@@ -277,8 +277,10 @@
 
         <h1>More Information</h1>
 
+        <h3>Updating Your Website</h3>
+
         <p>
-            If you'd like to change your website, you can simply return to the main
+            If you'd like to update your website, you can simply return to the main
             code tab of your repository, click on your "index.html" file,
             and then click the button with a pencil on it at the top of the file.
             This will allow you to edit your code. Once finished, click on
@@ -290,8 +292,8 @@
 
         <p>
             Web development has become more and more relevant in recent years
-            as a result of society's shift to depending on technology and the Internet.
-            It is a useful skill to know how to build your own website
+            as a result of peoples' increasing dependence on technology and the Internet,
+            so it is a useful skill to know how to build your own website
             no matter what job you have, as paying another organization to host your website
             for you can be very expensive.
             <br /><br />
@@ -303,7 +305,7 @@
             <li>Create a blog</li>
             <li>Make an "about me" website for others to read about you</li>
             <li>Create informational articles to help others or spread awareness about a topic</li>
-            <li>Create websites for your friends and family, so they don't need to pay for hosting fees</li>
+            <li>Create websites for your friends and family, so they don't need to pay for hosting fees either</li>
             <li>If you're interested in making a career out of web development, it is generally a high paying job</li>
         </ul>
 
@@ -328,7 +330,7 @@
         </p>
 
         <table>
-            <tr class="headers">
+            <tr>
                 <th>Job Name</th>
                 <th>Average Salary</th>
                 <th>Description</th>
@@ -370,6 +372,19 @@
                 <td>Computer network architects design and maintain data communication networks</td>
             </tr>
         </table>
+
+        <h1>About the Author</h1>
+        
+        <p>
+            I'm a high school student who loves programming. I've spent several years
+            building web applications, video games, mods for video games, bots for other apps,
+            and more. I love everything related to technology and programming, and I like
+            encouraging others to learn too.
+            I am also a fan of video games, and volleyball!
+
+            <br /><br />
+            Thanks for reading my article!
+        </p>
     </div>
 
     <script src="assets/prism.js"></script>
